tailscale-labs/k8s-v2/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  selector:
    app: apache
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
  - port: 80
    targetPort: 80
