tailscale-labs/k8s-v2/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tailscale
  # annotations:
  #   tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls: 
  - hosts:
    - "nginx-test"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-tailscale
            port:
              number: 8000
