tailscale-labs/k8s-v2/ts.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tailscale
  labels:
    app: nginx-tailscale
spec:
  selector:
    matchLabels:
      app: nginx-tailscale
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-tailscale
    spec:
      containers:
      - name: nginx-tailscale
        image: registry.hub.docker.com/clarkezone/tsgunicorn:latest
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-tailscale
spec:
  ports:
  - port: 8000
  selector:
    app: nginx-tailscale

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tailscale
    #  annotations:
    #  tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls: 
  - hosts:
    - "nginx-test"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-tailscale
            port:
              number: 8000
